# synthetictransits2

./: .gitignore  .gitmodules  CMakeLists.txt  Candidates.db  Check.py  Makefile  NGTSCatalogue.db  SyntheticTransits.kdev4  find_testdata.py  find_testdata_dir.py  generate_model.py  visualisation.ipynb
.kdev4/: SyntheticTransits.kdev4
Modelgen/: CMakeLists.txt
Modelgen/include/: Model.h
cmake/: Findfitsio.cmake  Findsqlite.cmake  Findsqlitepp.cmake  Findtclap.cmake
include/: FitsObject.h  GenerateModel.h  Model.h  ObjectSkipDefs.h  constants.h  fetches_parameters.h
src/: FitsObject.cpp  GenerateModel.cpp  compare_models.cpp  fetches_parameters.cpp  main.cpp
